--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-/target
+# Generated files
+/target/
+
+# Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
+# Cargo.lock
+
+# Backup files from rustfmt
+**/*.rs.bk
+
+# MSVC Windows builds of rustc generate these, which store debugging information
+*.pdb
+
+# Editor/IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
